2008-08-05  Christopher Bratusek <nano-master@gmx.de>
	* themes/Makefile.in: actually install get-S-tabbed

	* themes/mxflat
	* themes/Makefile.in: add the mxflat theme

2008-08-05  Scott Scriven <sawfish@toykeeper.net>
	* themes/get-S-tabbed/: added get-S-tabbed theme

2008-08-05  Christopher Bratusek <nano-master@gmx.de>
	* configure.in
	* po/POTFILES.in
	* capplet/*
	* Makefile.in
	* sawfish.spec.in: removed the capplet

2008-08-04  Guillermo S. Romero <gsromero@infernal-iceberg.com>
	* lisp/sawfish/wm/menus.jl: added some missing accelerators in
	window-ops-menu as well as Move and Resize entries, issue reported
	by Fernando Carmona Varo. Also removed tabs in the affected
	defvar.

2008-08-04  Timo Korvola  <tkorvola@svn.gnome.org>
	* src/windows.c, src/sawmill_subrs.h, man/sawmill.texi: Rename
	window-prop-del to window-remprop.

2008-08-04  Christopher Bratusek <nano-master@gmx.de>
	* Makefile.in
	* sawfish.spec.in: Sawfish.desktop is now sawfish.desktop

	* po/sawfish.pot
	* po/*.po: updated the pot file and all po files
		- removed deprecated strings
		- removed executable bits from po files

2008-08-04  Janek Kozicki <cosurgi@gmail.com>
	* mark all subdir */Changelog as deprecated

	* lisp/sawfish/wm/focus.jl: add Enter-Click Focus Mode by
	Dagfinn I. Mannsåke (Original Author), Christopher Bratusek
	and Timo Korvola (Simplyfied Code)

	* themes/Crux/theme.jl: Refresh icons patch by Timo Korvola

	* Sawfish.desktop: Update desktop file (again) by Christopher Bratusek

	* configure.in: Bump version requirements: pango 1.16, gtk 2.6, gdk 2.6
	Christopher Bratusek.

	*  src/keys.c, src/frames.c, src/windows.c, src/sawmill_subrs.h,
	man/sawmill.texi: Added Negative-property-p by Teika Kazura
	NOTE: we also need window-setplist

	* src/windows.c, src/sawmill_subrs.h, man/sawmill.texi: Add Window
	prop list & prop del by Teika Kazura.

	* lisp/sawfish/wm/frames.jl: Decorations toolbar windows by Andrea
	Vettorello. This was actually applied in revision 4229.
