@@ -1,3 +1,9 @@
+2008-08-06  Guillermo S. Romero <gsromero@svn.gnome.org>
+	* lisp/sawfish/wm/commands/x-cycle.jl
+	* man/sawmill.texi: added after-cycle-step-hook and related docs,
+	originally by Teika kazura. Changed some white space in the
+	process.
+
 2008-08-05  Christopher Bratusek <nano-master@gmx.de>
 	* themes/Makefile.in: actually install get-S-tabbed
 
@@ -14,7 +20,7 @@
 	* Makefile.in
 	* sawfish.spec.in: removed the capplet
 
-2008-08-04  Guillermo S. Romero <gsromero@infernal-iceberg.com>
+2008-08-04  Guillermo S. Romero <gsromero@svn.gnome.org>
 	* lisp/sawfish/wm/menus.jl: added some missing accelerators in
 	window-ops-menu as well as Move and Resize entries, issue reported
 	by Fernando Carmona Varo. Also removed tabs in the affected
